fixing margins on mobile

--- a/style.css
+++ b/style.css
@@ -79,12 +79,11 @@ body {
     font-size: 15px;
 
 }
-
-
 .card-grid {
     display: grid;
     grid-template-rows: 44rem 44rem 44rem;
-    width: 87%;
+    width: 33rem;
+    place-content: center;
 }
 
 .grid-row-1 {
@@ -176,10 +175,6 @@ h1 {
 }
 
 @media only screen and (min-width: 600px) {
-    body {
-        place-content: center;
-    }
-
     .card-grid {
         grid-template-rows: 50rem;
         grid-template-columns: 31rem 31rem 31rem;
